[gd_scene load_steps=11 format=2]

[ext_resource path="res://Paddle/Paddle Container.gd" type="Script" id=1]
[ext_resource path="res://Ball/Ball Container.gd" type="Script" id=2]
[ext_resource path="res://Brick/Brick Container.gd" type="Script" id=3]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=4]
[ext_resource path="res://Powerup/Powerup Container.gd" type="Script" id=5]
[ext_resource path="res://Assets/background.jpg" type="Texture" id=6]
[ext_resource path="res://HUD/Background.gd" type="Script" id=7]
[ext_resource path="res://Audio/Music.gd" type="Script" id=8]
[ext_resource path="res://Assets/music.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/paddle.wav" type="AudioStream" id=10]

[node name="Game" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
modulate = Color( 1, 0.866667, 0.8, 1 )
position = Vector2( 512, 232 )
scale = Vector2( 2.68273, 2.63529 )
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( 1.24446, -2.42607 )
scale = Vector2( 0.999132, 1.00272 )
polygon = PoolVector2Array( 0, 672, 0, 0, 1024, 0, 1024, 672, 1088, 672, 1088, -64, -64, -64, -64, 672 )

[node name="Powerup Container" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Paddle Container" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Ball Container" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Brick Container" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_right = 136.0
margin_bottom = 136.0
color = Color( 0, 0, 0, 0.560784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 80.0
margin_right = 304.0
margin_bottom = 144.0
text = "Score:
"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 32.0
margin_right = 392.0
margin_bottom = 96.0
text = "Time:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = -8.0
margin_right = 272.0
margin_bottom = 56.0
text = "Lives:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="HUD"]
autostart = true

[node name="Audio" type="Control" parent="HUD"]
margin_left = 10.0
margin_top = 410.0
margin_right = 10.0
margin_bottom = 410.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio_music" type="CheckBox" parent="HUD/Audio"]
margin_right = 136.0
margin_bottom = 36.0
text = "Music"

[node name="Audio_effect" type="CheckBox" parent="HUD/Audio"]
margin_left = 6.0
margin_top = 54.0
margin_right = 120.0
margin_bottom = 78.0
pressed = true
text = "Sound effects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
script = ExtResource( 8 )

[node name="Effect_padle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="timeout" from="HUD/Timer" to="HUD" method="_on_Timer_timeout"]
[connection signal="toggled" from="HUD/Audio/Audio_music" to="HUD" method="_on_Audio_music_toggled"]
[connection signal="toggled" from="HUD/Audio/Audio_music" to="Background" method="_on_Audio_music_toggled"]
[connection signal="toggled" from="HUD/Audio/Audio_effect" to="HUD" method="_on_Audio_effect_toggled"]
[connection signal="finished" from="Music" to="Music" method="_on_Music_finished"]
